--- a/#source/scss/admin.scss
+++ b/#source/scss/admin.scss
@@ -207,7 +207,6 @@
     border-top: 1px solid #D9DBDF;
 }
 
-
 // ---------
 .admincontent__head {
     height: 103px;
@@ -1447,6 +1446,7 @@
     .recentorders__body {
         padding: 15px;
     }
+
 }
 
 // Admin all customers settings
@@ -2674,7 +2674,7 @@
     border: 1px solid $base-green;
 
     &:hover {
-        box-shadow: 0 4px 10px rgba(21,132,102,0.3);
+        box-shadow: 0 4px 10px rgba(21, 132, 102, 0.3);
     }
 }
 
@@ -2682,7 +2682,7 @@
     border: 1px solid #C9273A;
 
     &:hover {
-        box-shadow: 0 4px 10px rgba(201,39,58,0.3);
+        box-shadow: 0 4px 10px rgba(201, 39, 58, 0.3);
     }
 }
 
@@ -2690,4 +2690,495 @@
     .sellertable table.table__categories {
         width: 700px;
     }
+}
+
+.admininfosect__title {
+    .backlink {
+        display: inline-block;
+        vertical-align: middle;
+        margin-top: -3px;
+        margin-right: 30px;
+
+        img {
+            width: 30px;
+        }
+    }
+}
+
+.admininfosect__body.addcategory {
+    padding-top: 25px;
+
+    .inputfield {
+        margin-bottom: 35px;
+
+        label img {
+            width: 16px;
+            margin-top: -3px;
+        }
+    }
+}
+
+@media(max-width:1199.8px) {
+    .formbox .inputfield .generalselect .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: 46px;
+    }
+}
+
+@media(max-width:991.8px) {
+    .admininfosect__header .admininfosect__rightbox {
+        margin-top: 10px;
+    }
+
+    .admininfosect__title .backlink {
+        margin-right: 15px;
+    }
+
+    .admininfosect__body.addcategory .inputfield {
+        margin-bottom: 15px;
+    }
+
+    .admininfosect__rightbox .circpluslink {
+        margin-left: 10px;
+    }
+
+    .admininfosect__rightboxlist {
+
+        padding-left: 10px;
+
+        li {
+            margin-right: 20px;
+        }
+    }
+}
+
+.admininfosect__rightbox {
+    p {
+        margin: 0;
+        color: #21292F;
+    }
+}
+
+// sales by seller
+
+.orderdetails__day {
+    display: flex;
+
+    .imgwrap {
+        width: 100%;
+        max-width: 21px;
+        flex: 0 0 21px;
+        height: 21px;
+    }
+
+    .descrwrap {
+        width: 100%;
+        max-width: calc(100% - 21px);
+        flex: 0 0 calc(100% - 21px);
+        padding-left: 10px;
+
+        p {
+            color: #3B454D;
+            font-size: 15px;
+            font-weight: 500;
+            line-height: 21px;
+            margin-bottom: 5px;
+
+            &:last-child {
+                margin-bottom: 0;
+            }
+        }
+
+        .orderid {
+            font-size: 14px;
+            color: #81868A;
+        }
+    }
+}
+
+.orderdetailsblock {
+    display: flex;
+    justify-content: flex-end;
+
+    .printbtn {
+        width: 100%;
+        max-width: 45px;
+        flex: 0 0 45px;
+        margin-left: 20px;
+        background: #fff;
+        padding: 0;
+        border: 2px solid $base-green;
+        border-radius: 7.5px;
+    }
+
+    .save {
+        width: 100%;
+        max-width: 160px;
+        flex: 0 0 160px;
+        font-size: 15px;
+        margin-left: 20px;
+    }
+
+    .generalselect {
+        width: 100%;
+        max-width: 230px;
+        flex: 0 0 230px;
+    }
+
+}
+
+.orderdetails__topinfo {
+    margin-bottom: 30px;
+}
+
+.orderstatussect {
+    margin-bottom: 28px;
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 39px 80px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.orderstatusbox {
+    width: 100%;
+    max-width: 260px;
+    flex: 0 0 260px;
+    display: flex;
+    flex-wrap: wrap;
+
+    .orderstatusbox__img {
+        width: 100%;
+        max-width: 55px;
+        flex: 0 0 55px;
+
+        .imgwrap {
+            width: 100%;
+            height: 55px;
+            background: #13B086;
+            border-radius: 10px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                max-width: 100%;
+                max-height: 100%;
+            }
+
+        }
+    }
+
+    .orderstatusbox__descr {
+        width: 100%;
+        max-width: calc(100% - 55px);
+        flex: 0 0 calc(100% - 55px);
+        padding-left: 20px;
+
+        p {
+            margin-bottom: 4px;
+            color: #3B454C;
+            font-size: 14px;
+        }
+
+        .title {
+            margin-bottom: 5px;
+            font-size: 17px;
+            font-weight: 500;
+        }
+
+        a {
+            color: $base-green;
+            font-size: 14px;
+            font-weight: 600;
+            line-height: 110%;
+            display: inline-block;
+            margin-top: 10px;
+        }
+    }
+}
+
+.orderrow {
+    display: flex;
+    flex-wrap: wrap;
+
+    .orderrow__left {
+        width: 100%;
+        max-width: 69%;
+        flex: 0 0 69%;
+        padding-right: 40px;
+
+        table {
+            width: 100%;
+
+            th {
+                font-size: 14px;
+                color: #3B454C;
+                font-weight: 600;
+                line-height: 110%;
+                padding-bottom: 15px;
+            }
+
+            td {
+                padding: 10px 5px 10px 0;
+                font-size: 15px;
+            }
+
+            .ordtabprod {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+
+                .imgwrap {
+                    width: 100%;
+                    max-width: 45px;
+                    flex: 0 0 45px;
+                }
+
+                p {
+                    width: 100%;
+                    max-width: calc(100% - 45px);
+                    flex: 0 0 calc(100% - 45px);
+                    margin: 0;
+                    padding-left: 15px;
+                    color: #3B454C;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 2;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+        }
+    }
+
+    .orderrow__right {
+        width: 100%;
+        max-width: 31%;
+        flex: 0 0 31%;
+    }
+}
+
+.orderrow__left {
+    .tablewrapper {
+        border-radius: 10px;
+        background: #FFF;
+        box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+        padding: 35px;
+
+
+    }
+}
+
+.order__totalresultwrap {
+    text-align: right;
+}
+
+.order__totalresult {
+    margin-top: 25px;
+    width: 210px;
+    display: inline-block;
+
+    .title {
+        width: 100%;
+        max-width: 40%;
+        flex: 0 0 40%;
+        font-size: 14px;
+        color: #3B454C;
+        font-weight: 500;
+        text-align: left;
+    }
+
+    .price {
+        width: 100%;
+        max-width: 60%;
+        flex: 0 0 60%;
+        font-size: 14px;
+        color: #3B454C;
+        font-weight: 500;
+    }
+
+    .subtotal {
+        margin-bottom: 19px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .savings {
+        margin-bottom: 20px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .total {
+        margin-bottom: 15px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .title {
+            font-size: 19px;
+            font-weight: 600;
+            line-height: 160%;
+        }
+
+        .price {
+            color: #3B454C;
+            font-size: 20px;
+            font-weight: 500;
+            line-height: 160%;
+        }
+    }
+
+    .paymentdone {
+        display: inline-block;
+        border-radius: 12px;
+        background: rgba(19, 176, 134, 0.13);
+        color: $base-green;
+        font-size: 11px;
+        font-weight: 600;
+        line-height: 160%;
+        padding: 6px 10px;
+    }
+}
+
+.ordpaymentinfo {
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 25px;
+    margin-bottom: 30px;
+
+    .title {
+        margin-bottom: 25px;
+        color: #3B454C;
+        font-size: 17px;
+        font-weight: 500;
+    }
+
+    .ordpaymentinfo__card {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-bottom: 10px;
+
+        .imgwrap {
+            width: 100%;
+            max-width: 44px;
+            flex: 0 0 44px;
+            height: 27px;
+            background: #fff;
+            box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+
+            img {
+                width: 25px;
+            }
+        }
+
+        .cardnum {
+            width: 100%;
+            max-width: calc(100% - 44px);
+            flex: 0 0 calc(100% - 44px);
+            margin: 0;
+            padding-left: 10px;
+            color: $bace-color;
+            font-size: 13px;
+            font-weight: 500;
+        }
+    }
+
+    p {
+        font-size: 14px;
+        color: #3B454C;
+        margin-bottom: 10px;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+}
+
+.ordnotes {
+    .title {
+        color: #3B454C;
+        font-size: 17px;
+        font-weight: 500;
+        line-height: 160%;
+        margin-bottom: 15px;
+    }
+
+    textarea {
+        resize: none;
+        width: 100%;
+        border-radius: 10px;
+        background: #F4F5F9;
+        box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+        padding: 20px 10px 10px 20px;
+        font-size: 14px;
+        border: 1px solid transparent;
+        height: 178px;
+        margin-bottom: 30px;
+        outline: none;
+        transition: 0.3s;
+
+        &:focus {
+            border: 1px solid $base-green;
+        }
+
+        &::-webkit-scrollbar {
+            width: 6px;
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(21, 132, 102, 0.4);
+            border-radius: 10px;
+        }
+    }
+
+    .greenbtn {
+        min-height: 45px;
+        max-width: 160px;
+        font-size: 15px;
+    }
+}
+
+.orderrow .orderrow__left table {
+    .product {
+        width: calc(77% - 200px);
+        padding-right: 5px;
+    }
+
+    .units {
+        width: 23%;
+        padding-right: 5px;
+    }
+
+    .price {
+        width: 100px;
+        padding-right: 5px;
+    }
+
+    .total {
+        width: 100px;
+        text-align: right;
+    }
+}
+
+
+@media(max-width:1400.8px) {
+
+    .orderstatussect {
+        padding: 30px 40px;
+    }
+
+
+
 }
