--- a/#source/scss/admin.scss
+++ b/#source/scss/admin.scss
@@ -3172,6 +3172,9 @@
     }
 }
 
+.orderdetailsblock {
+    flex-wrap: wrap;
+}
 
 @media(max-width:1400.8px) {
 
@@ -3179,6 +3182,290 @@
         padding: 30px 40px;
     }
 
+}
+
+@media(max-width:1300.8px) {
+
+    .orderstatusbox {
+        max-width: 32%;
+        flex: 0 0 32%;
+    }
+
+    .orderstatussect {
+        padding: 20px 20px;
+    }
+
+    .orderstatusbox .orderstatusbox__img,
+    .orderstatusbox .orderstatusbox__descr {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+    .orderstatusbox .orderstatusbox__img .imgwrap {
+        margin-bottom: 20px;
+    }
+
+    .orderrow .orderrow__left {
+        padding-right: 0;
+        max-width: 100%;
+        flex: 0 0 100%;
+
+        .tablewrapper {
+            margin-bottom: 20px;
+        }
+    }
+
+    .orderrow .orderrow__right {
+        max-width: 100%;
+        flex: 0 0 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+
+        .ordpaymentinfo,
+        .ordnotes {
+            max-width: calc(50% - 20px);
+            flex: 0 0 calc(50% - 20px);
+        }
+    }
+
+    .ordnotes textarea {
+        height: 130px;
+    }
 
 
 }
+
+@media(max-width:1199.8px) {
+    .orderdetailsblock {
+        justify-content: flex-start;
+        margin-top: 20px;
+    }
+
+}
+
+@media(max-width:991.8px) {
+
+    .orderdetailsblock .generalselect {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 20px;
+    }
+
+    .orderdetailsblock .save {
+        margin-left: 0;
+    }
+
+    .orderstatusbox {
+        max-width: 100%;
+        flex: 0 0 100%;
+        margin-bottom: 20px;
+    }
+
+    .orderstatusbox .orderstatusbox__descr .title {
+        font-size: 18px;
+    }
+
+    .orderstatusbox .orderstatusbox__descr p,
+    .orderstatusbox .orderstatusbox__descr a {
+        font-size: 16px;
+    }
+
+    .orderrow .orderrow__left table {
+        width: 600px;
+    }
+
+    .tablescroll {
+        overflow: auto;
+
+        &::-webkit-scrollbar {
+            height: 6px;
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(21, 132, 102, 0.2);
+            border-radius: 10px;
+        }
+    }
+
+    .orderrow .orderrow__left table .product {
+        padding-right: 10px;
+    }
+
+    .orderrow .orderrow__right .ordnotes,
+    .orderrow .orderrow__right .ordpaymentinfo {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+}
+
+@media(max-width:575.8px) {
+    .orderstatusbox .orderstatusbox__img .imgwrap {
+        height: 40px;
+        margin-bottom: 10px;
+    }
+
+    .orderstatusbox .orderstatusbox__descr {
+        padding: 0;
+    }
+
+    .orderrow .orderrow__left table .total,
+    .orderrow .orderrow__left table .price {
+        width: 70px;
+    }
+
+    .orderrow .orderrow__left table .units {
+        width: 100px;
+    }
+
+    .orderrow .orderrow__left table .product {
+        width: calc(100% - 240px);
+    }
+
+    .orderrow .orderrow__left table {
+        width: 500px;
+    }
+}
+
+// dashboard
+.createreport {
+    background: $base-green;
+    min-height: 45px;
+    max-width: 190px;
+    flex: 0 0 190px;
+    width: 100%;
+    border-radius: 99px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-size: 15px;
+    font-weight: 600;
+    text-transform: capitalize;
+
+    img {
+        width: 22px;
+        margin-right: 3px;
+    }
+}
+
+.dashboardinfosect {
+    margin-bottom: 40px;
+
+    .uplinbox {
+        line-height: 160%;
+
+        .title {
+            color: #81868A;
+            font-size: 14px;
+            font-weight: 500;
+            margin-bottom: 3px;
+        }
+
+        .descr {
+            margin-bottom: 0;
+            color: #3B454C;
+            font-size: 18px;
+            font-weight: 600;
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+    }
+}
+
+.salestatistics {
+    border-radius: 10px;
+    background: #FFF;
+    box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.06);
+    padding: 40px;
+}
+
+.salestatistics__title {
+    margin-bottom: 10px;
+    color: $bace-color;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 160%;
+}
+
+.salestatistics__subtitle {
+    color: #81868A;
+    font-size: 13px;
+    margin-bottom: 35px;
+}
+
+.salestatistics__header {
+    display: flex;
+    flex-wrap: wrap;
+
+    .salestatistics__weekinfo {
+        width: 100%;
+        max-width: calc(100% - 211px);
+        flex: 0 0 calc(100% - 211px);
+    }
+
+    .salestatistics__dates {
+        width: 100%;
+        max-width: 211px;
+        flex: 0 0 211px;
+    }
+}
+
+.weekinfo {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    max-width: 195px;
+    flex: 0 0 195px;
+
+    .imgwrap {
+        width: 100%;
+        max-width: 36px;
+        flex: 0 0 36px;
+
+        img {
+            width: 100%;
+        }
+    }
+
+    .textwrap {
+        width: 100%;
+        max-width: calc(100% - 36px);
+        flex: 0 0 calc(100% - 36px);
+        padding-left: 10px;
+
+        p {
+            color: #81868A;
+            font-size: 14px;
+            margin: 0;
+            letter-spacing: -0.42px;
+            line-height: 130%;
+        }
+
+        .num {
+            color: $bace-color;
+            font-size: 16px;
+            letter-spacing: -0.48px;
+            font-weight: 500;
+        }
+    }
+}
+
+.salestatistics__weekinfo {
+    display: flex;
+    align-items: center;
+}
+
+
+
+
+
+
+
