--- a/#source/scss/seller-account.scss
+++ b/#source/scss/seller-account.scss
@@ -12,8 +12,14 @@
                 background: url(../img/header/select-arrow.svg) no-repeat center center/100%;
                 position: absolute;
                 right: 10px;
-                top: 50%;
-                transform: translateY(-50%);
+                top: 11px;
+                transition: 0.3s;
+            }
+        }
+
+        &>a.open {
+            &::after {
+                transform: rotate(-180deg);
             }
         }
     }
@@ -30,7 +36,7 @@
 
 .accountsidebar__box {
     .sellacc__sublist {
-        padding-left: 40px;
+        padding-left: 30px;
         margin-bottom: 20px;
         display: none;
         margin-top: 8px;
@@ -45,6 +51,40 @@
             &.active {
                 a {
                     color: #158466;
+                }
+            }
+
+            &>ul {
+                margin-top: 5px;
+                display: none;
+
+                li {
+                    padding-left: 15px;
+                    margin-bottom: 5px;
+
+                    &:last-child {
+                        margin-bottom: 0;
+                    }
+                }
+            }
+        }
+
+        .sellacc__sublink {
+            &::after {
+                content: "";
+                display: inline-block;
+                width: 15px;
+                height: 15px;
+                background: url(../img/header/select-arrow.svg) no-repeat center center/100%;
+                position: absolute;
+                right: 10px;
+                top: 3px;
+                transition: 0.3s;
+            }
+
+            &.open {
+                &::after {
+                    transform: rotate(-180deg);
                 }
             }
         }
@@ -3187,8 +3227,10 @@ input:focus+label+.input-infobtn {
             width: 100%;
         }
 
-       .greenbtn {
-        width: 100%;
+        .greenbtn {
+            width: 100%;
         }
     }
 }
+
+
