--- a/#source/scss/seller-account.scss
+++ b/#source/scss/seller-account.scss
@@ -2130,6 +2130,8 @@ input:focus+label+.input-infobtn {
         }
     }
 
+
+
     .name {
         width: calc(100% - 751px);
     }
@@ -3234,3 +3236,403 @@ input:focus+label+.input-infobtn {
 }
 
 
+// datearrow
+
+.salestatistics__dates {
+    .input-group-zeus {
+        &::after {
+            content: '';
+            display: inline-block;
+            width: 15px;
+            height: 15px;
+            background: url('../img/selleracc/datearrow.svg') no-repeat center / 13px;
+            position: absolute;
+            right: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
+
+    input {
+        padding-right: 40px;
+    }
+}
+
+.today-yesterday {
+    height: 43px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background: #fff;
+    border-radius: 35px;
+    border: 1px solid #D9DBDF;
+
+    a {
+        color: #3B454D;
+        font-size: 14px;
+        font-weight: 500;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        transition: 0.3s;
+
+        &:hover {
+            background: #f5f5f5;
+        }
+
+        &:nth-child(1) {
+            width: 100%;
+            max-width: 40%;
+            flex: 0 0 40%;
+            border-radius: 35px 0 0 35px;
+        }
+
+        &:nth-child(2) {
+            width: 100%;
+            max-width: 60%;
+            flex: 0 0 60%;
+            border-radius: 0 35px 35px 0;
+            border-left: 1px solid #D9DBDF;
+
+        }
+    }
+}
+
+.comparedbtn {
+    height: 43px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background: #fff;
+    border-radius: 35px;
+    border: 1px solid #D9DBDF;
+    padding: 2px 25px;
+    color: #3B454C;
+    font-size: 14px;
+    font-weight: 500;
+    transition: 0.3s;
+
+    &:hover {
+        background: #f5f5f5;
+    }
+}
+
+.reports-topfilter {
+    margin-bottom: 35px;
+}
+
+.orderoverview.reports {
+    ul li {
+        max-width: 48%;
+        flex: 0 0 48%;
+    }
+}
+
+.salestatistics.reports {
+    .salestatistics__body>div {
+        height: 350px;
+    }
+}
+
+.dashboardsection.reports {
+    .searchblock {
+        max-width: 100%;
+    }
+}
+
+.tablecheckbox {
+    input {
+        display: none;
+
+        &:checked {
+            &+label {
+                border-color: $base-green;
+                background: url(../img/login/check.svg) no-repeat center/14px;
+            }
+        }
+    }
+
+    label {
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        border-radius: 2px;
+        background: #FFF;
+        border: 1px solid #DBDCE2;
+        border-radius: 2px;
+        cursor: pointer;
+        margin-top: 2px;
+    }
+}
+
+.rep-prname {
+    p {
+        margin: 0;
+        color: $base-green;
+        text-overflow: ellipsis;
+        overflow: hidden;
+        white-space: nowrap;
+    }
+}
+
+.reports .dashboardsection__content table tbody td {
+    vertical-align: top;
+    padding: 12px 5px 12px 0;
+}
+
+.dashboardsection__content table tbody td.rep-natsales,
+.dashboardsection__content table tbody td.rep-orders {
+    color: $base-green;
+    font-weight: 500;
+}
+
+.dashboardsection__content table tbody td.rep-category {
+    p {
+        margin-bottom: 6px;
+    }
+
+    span {
+        padding: 5px 10px;
+        border-radius: 70px;
+        background: #E7F5EC;
+        color: #3B454C;
+        font-size: 13px;
+        font-weight: 500;
+    }
+}
+
+.dashboardsection__content table tbody td.rep-status {
+    span {
+        display: inline-block;
+        padding: 6px 10px;
+        border-radius: 99px;
+        background: $base-green;
+        color: #fff;
+        font-size: 13px;
+        font-weight: 600;
+        line-height: 110%;
+    }
+}
+
+.dashboardsection.reports {
+    padding: 25px;
+}
+
+.dashboardsection.reports {
+    .rep-check {
+        width: 35px;
+    }
+
+    .ret-itsold {
+        width: 13%;
+    }
+
+    .rep-natsales {
+        width: 12%;
+    }
+
+    .rep-orders {
+        width: 11%;
+    }
+
+    .rep-category {
+        width: 13%;
+    }
+
+    .rep-stock {
+        width: 11%;
+    }
+
+    .rep-status {
+        padding-right: 0;
+        width: 12%;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+// --------------
+.datatablewrapper {
+    padding: 0 35px;
+
+    .col-sm-12.col-md-7 {
+        max-width: 100%;
+        flex: 0 0 100%;
+    }
+
+}
+
+.datatable {
+    margin-top: 30px;
+
+    .sorting_disabled {
+        &::after {
+            display: none !important;
+        }
+    }
+
+    th:after {
+        margin-left: 3px;
+    }
+
+   
+}
+
+
+.dataTables_filter {
+    label {
+        width: 100%;
+    }
+
+    input {
+        width: 100%;
+        height: 43px;
+        border-radius: 35px;
+        border: 1px solid #D9DBDF;
+        background: #FFF;
+        padding-left: 20px;
+        font-size: 14px;
+        font-weight: 500;
+        padding-right: 45px;
+        transition: 0.3s;
+        box-shadow: none;
+
+        &:focus {
+            border-color: #158466;
+            box-shadow: none;
+        }
+    }
+}
+
+.dataTables_length {
+    label {
+        width: 100%;
+        max-width: 280px;
+    }
+
+    select {
+        height: 43px;
+        color: #3B454C;
+        font-size: 14px;
+        font-weight: 500;
+        border-radius: 35px;
+        padding-left: 30px;
+
+        &:focus {
+            box-shadow: none;
+            border-color: #158466;
+        }
+    }
+}
+
+
+
+
+.dataTables_paginate .paginate_button.previous {
+    a {
+        background-image: url('../img/general/pagination-prev.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        font-size: 0 !important;
+        
+    }
+}
+
+.dataTables_paginate .paginate_button.next {
+    a {
+        background-image: url('../img/general/pagination-next.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+        font-size: 0 !important;
+    }
+}
+
+.dataTables_paginate {
+    .paginate_button.page-item {
+        margin: 0 4px;
+
+        a {
+            background-color: transparent;
+            border: none;
+            color: #3B454C;
+            font-size: 18px;
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
+            border: 1px solid transparent;
+            padding: 0;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            box-shadow: none !important;
+
+            &:hover {
+                border: 1px solid $base-green;
+            }
+
+            &[aria-current="page"] {
+                background: $base-green;
+                color: #fff;
+            }
+
+        }
+    }
+
+    .pagination {
+        margin-top: 35px;
+    }
+}
+
+.prodlist-selectbox {
+    padding-top: 30px;
+}
+
+
+@media(max-width: 1399.8px) {
+
+    .datatablewrapper.sellertable {
+
+        &::-webkit-scrollbar {
+            height: 6px;
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+            border-radius: 10px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: rgba(21, 132, 102, 0.2);
+            border-radius: 10px;
+        }
+    }
+
+
+}
+
+@media(max-width: 991.8px) {
+    .datatablewrapper {
+        padding: 0 20px;
+    }
+}
+
+@media(max-width: 575.8px) {
+    .datatablewrapper {
+        padding: 0 15px;
+    }
+
+    .dataTables_length {
+        margin-bottom: 10px;
+    }
+}
